Remove live demo link, for now

--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@ layout: default
 
 <p><tt>proselint</tt> places the world&rsquo;s greatest writers and editors by your side, where they whisper suggestions on how to improve your prose. You&rsquo;ll be guided by advice inspired by Bryan Garner, David Foster Wallace, Chuck Palahniuk, Steve Pinker, Mary Norris, Mark Twain, Elmore Leonard, George Orwell, Matthew Butterick, William Strunk, E.B. White, Philip Corbett, Ernest Gowers, and the editorial staff of the world&rsquo;s finest literary magazines and newspapers, among others. Our goal is to aggregate knowledge about best practices in writing and to make that knowledge immediately accessible to all authors in the form of a linter for prose.</p>
 
-<p>Currently, <tt>proselint</tt> is a command-line utility that is meant to be integrated into other tools. There&rsquo;s a plugin for Sublime Text and a <a href="/write">live demo</a>. It&rsquo;s open-source software available under the permissive BSD license. Work on <tt>proselint</tt> happens over <a href="http://github.com/amperser/proselint/">on Github</a>. We welcome <a href="/contributing">contributors.</a></p>
+<p>Currently, <tt>proselint</tt> is a command-line utility that is meant to be integrated into other tools. There&rsquo;s a plugin for Sublime Text. It&rsquo;s open-source software available under the permissive BSD license. Work on <tt>proselint</tt> happens over <a href="http://github.com/amperser/proselint/">on Github</a>. We welcome <a href="/contributing">contributors.</a></p>
 
 <p>With time, <tt>proselint</tt> will become fast, precise, exhaustive, and authoritative. Eventually, it will be unthinkable to write without it by your side.</p>
 
